--- a/ImageFastLoader/ImageFastLoader.csproj
+++ b/ImageFastLoader/ImageFastLoader.csproj
@@ -34,7 +34,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
+    <Reference Include="Lucene.Net, Version=3.0.3.0, Culture=neutral, PublicKeyToken=85089178b9ac3181, processorArchitecture=MSIL">
+      <HintPath>packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +62,15 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AsyncVirtualizingCollection.cs" />
+    <Compile Include="DataModel\BaseNotify.cs" />
+    <Compile Include="DataModel\DocumentData.cs" />
+    <Compile Include="DataModel\SearchContext.cs" />
+    <Compile Include="Extensibility\DelegateCommand.cs" />
+    <Compile Include="Extensibility\PathToPicConverter.cs" />
+    <Compile Include="LuceneServices\Impl\FileScanner.cs" />
+    <Compile Include="LuceneServices\Impl\LuceneSearchManager.cs" />
+    <Compile Include="LuceneServices\Inte\IFilesScanner.cs" />
+    <Compile Include="LuceneServices\Inte\ISearchManager.cs" />
     <Compile Include="VirtualizingCollection.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -91,6 +107,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -99,5 +116,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
