--- a/LuceneSearch/LuceneSearch/App.config
+++ b/LuceneSearch/LuceneSearch/App.config
@@ -5,7 +5,7 @@
     </startup>
 
   <appSettings>
-    <add key="DataLocation" value="C:\Bhabesh\Personal\Pics"/>
+    <add key="DataLocation" value="C:\Program Files (x86)"/>
     <add key="IndexLocation" value="C:\MyLuceneIndex"/>
   </appSettings>
 </configuration>
