--- a/LuceneSearch/LuceneSearch/App.config
+++ b/LuceneSearch/LuceneSearch/App.config
@@ -5,7 +5,7 @@
     </startup>
 
   <appSettings>
-    <add key="DataLocation" value="D:"/>
+    <add key="DataLocation" value="C:\Bhabesh"/>
     <add key="IndexLocation" value="C:\MyLuceneIndex"/>
   </appSettings>
 </configuration>
