--- a/LuceneSearch/LuceneSearch/packages.config
+++ b/LuceneSearch/LuceneSearch/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.6.5" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
 </packages>
