New Settings Feature to control Indexing parameters
New Settings Feature to control Indexing parameters. Lost All changes yesterday night,  re developed in the morning. :)

--- a/LuceneSearch/LuceneSearch/LuceneSearch.csproj
+++ b/LuceneSearch/LuceneSearch/LuceneSearch.csproj
@@ -67,6 +67,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataModel\NameValuePair.cs" />
     <Compile Include="DataModel\SearchContext.cs" />
     <Compile Include="Extensibility\PathToPicConverter.cs" />
     <Compile Include="Services\Impl\FileScanner.cs" />
