Configurable Search Filters (xml)
Configurable Search Filters (xml)

--- a/LuceneSearch/LuceneSearch/LuceneSearch.csproj
+++ b/LuceneSearch/LuceneSearch/LuceneSearch.csproj
@@ -122,6 +122,10 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="SearchFiltersConfig.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
