Analysis status and flowdocument for source viewing added
UI changes, included flowdocuments and status update upon analysis

--- a/CSharpCompiler/Accord.DataModel/Accord.DataModel.csproj
+++ b/CSharpCompiler/Accord.DataModel/Accord.DataModel.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalysisResultData.cs" />
+    <Compile Include="AnalysisStatus.cs" />
     <Compile Include="DocumentData.cs" />
     <Compile Include="EnumDescriptionFetcher.cs" />
     <Compile Include="NameRuleError.cs" />
