--- a/CSharpCompiler/Accord.MainApp/Accord.MainApp.csproj
+++ b/CSharpCompiler/Accord.MainApp/Accord.MainApp.csproj
@@ -86,6 +86,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="AppBootStrapper.cs" />
+    <Compile Include="Converters\AnalysisStatusToColorConverter.cs" />
     <Compile Include="MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
       <SubType>Code</SubType>
