--- a/CSharpCompiler/Accord.DataModel/Accord.DataModel.csproj
+++ b/CSharpCompiler/Accord.DataModel/Accord.DataModel.csproj
@@ -50,6 +50,7 @@
     <Compile Include="NameRuleError.cs" />
     <Compile Include="NameRuleViolations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SummaryData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
