Resolved build error -- added ref to UnitContainer from Libs
Resolved build error -- added ref to UnitContainer from Libs

--- a/CSharpCompiler/Accord.MainApp/Accord.MainApp.csproj
+++ b/CSharpCompiler/Accord.MainApp/Accord.MainApp.csproj
@@ -77,6 +77,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Libs\PRISM\Unity.Abstractions.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Container">
+      <HintPath>..\Libs\PRISM\Unity.Container.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
